<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mccracken.lab1_mccracken.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/red"
        android:textColor="@color/red"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/green"
        android:textColor="@color/green"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/textView2"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/blue"
        android:textColor="@color/blue"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/textView3"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textView5"
        android:text="@string/yellow"
        android:textColor="@color/yellow"
        android:background="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:text="@string/magenta"
        android:textColor="@color/magenta"
        android:background="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView5"
        android:paddingLeft="@dimen/activity_horizontal_margin_smaller"/>

    <TextView
        android:id="@+id/textView7"
        android:text="@string/cyan"
        android:textColor="@color/cyan"
        android:background="@color/black"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView6"
        android:paddingLeft="@dimen/activity_horizontal_margin_smaller"/>

    <TextView
        android:id="@+id/textView8"
        android:text="@string/colorIntro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:text="@string/normal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:text="@string/big"
        android:textSize="@dimen/activity_big_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:text="@string/bigger"
        android:textSize="@dimen/activity_bigger_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:text="@string/centered"
        android:layout_centerHorizontal="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:text="@string/right"
        android:layout_alignParentRight="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:text="@string/newIntro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:text="@string/allCaps"
        android:textAllCaps="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:text="@string/background"
        android:background="@color/black"
        android:textColor="@color/white"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:text="@string/selectable"
        android:textIsSelectable="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView16" />

</RelativeLayout>
